feat: Enhance storage service with Cloudinary & pagination support
- Integrate Cloudinary for cloud-based image storage
- Update .env.example with Cloudinary configuration
- Add Cloudinary dependency to pom.xml
- Modify FileStorageService to support both local and cloud storage
- Implement fallback mechanism for image uploads
- Update image URL handling in product creation and retrieval
- Updated Multiple Endpoint with pagination capabilities